...
                  ),

                if (role?.hasPermission('payments', 'read') ?? false)
                  _buildNavItem(
                    context: context,
                    icon: Icons.payment_outlined,
                    label: 'Payments',
                    route: AppRoute.payments,
                  ),

                const _NavSection(title: 'ENGAGEMENT'),

                if (role?.hasPermission('campaigns', 'read') ?? false)
...
                  ),

                if (role?.hasPermission('reviews', 'read') ?? false)
                  _buildNavItem(
                    context: context,
                    icon: Icons.rate_review_outlined,
                    label: 'Reviews',
                    route: AppRoute.reviews,
                  ),

                const _NavSection(title: 'SYSTEM'),

                _buildNavItem(
...
